--- a/WarehouseMVC/Views/Fournisseur/CategorieFournisseur.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/CategorieFournisseur.cshtml
@@ -7,7 +7,7 @@
 <h2>CategorieFournisseur</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <b>@Html.ActionLink("Create New", "Create")</b>
 </p>
 <table class="table">
     <tr>
