--- a/WarehouseMVC/Views/Fournisseur/Delete.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/Delete.cshtml
@@ -1,31 +1,28 @@
 ﻿@model WarehouseMVC_DAL.Models.Fournisseur
+@using WarehouseMVC.Infrastructure
+
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2>Supprimer un fournisseur</h2>
 
-<hr />
-<div class="jumbotron">
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+        @DateTime.Now.ToString("dd/MM/yyyy")<br />
+        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+        <div class="col-lg-offset-1">
+            <h3>Fournisseur n° @Html.DisplayFor(model => model.FournisseurId) - @Html.DisplayFor(model => model.Nom)
+        </div>
+        <hr />
 
         <div class="form-actions no-color">
             <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
         </div>
         <br />
-        @Html.ActionLink(">>> Annuler <<<", "Index")
-    }
-</div>
+
+}
+<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>  
