--- a/WarehouseMVC/Views/Fournisseur/Edit.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/Edit.cshtml
@@ -11,11 +11,11 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="jumbotron">
+
     @DateTime.Now.ToShortDateString()<br />
     @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-    <hr />
-    <h3>Fournisseur n° @Html.DisplayFor(model => model.FournisseurId)</h3>
+
+    <h3>Fournisseur n° @Html.DisplayFor(model => model.FournisseurId) - @Html.DisplayFor(model => model.Nom)</h3>
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -98,9 +98,9 @@
             </div>
         </div>
     </div>
-</div>
+
 }
 
 <div>
-    @Html.ActionLink(">>> Annuler <<<", "Index")
+    <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
 </div>
