--- a/WarehouseMVC/Views/Article/Delete.cshtml
+++ b/WarehouseMVC/Views/Article/Delete.cshtml
@@ -7,26 +7,21 @@
 
 <h2>Supprimer l'article</h2>
 
-    <hr />
-    <div class="jumbotron">
+
+@using (Html.BeginForm())
+{
+    
         @DateTime.Now.ToString("dd/MM/yyyy")<br />
         @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+
         <div class="col-lg-offset-1">
-            <h3>@Html.DisplayFor(model => model.Nom)</h3>
+            <h3>Article n° @Html.DisplayFor(model => model.ArticleId) - @Html.DisplayFor(model => model.Nom)</h3>
         </div>
         <hr />
-        <dl class="dl-horizontal">
-        </dl>
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-actions no-color">
-                <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
-            </div>
-            <br />
-
-        }
-    </div>
-    @Html.ActionLink(">>> Annuler <<<", "Index")
+        <div class="form-actions no-color">
+            <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
+        </div>
+        <br />
+}
+<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
