--- a/WarehouseMVC/Views/Article/Index.cshtml
+++ b/WarehouseMVC/Views/Article/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<WarehouseMVC_DAL.Models.Article>
+﻿@model PagedList.IPagedList<WarehouseMVC_DAL.Models.Article>
 @using WarehouseMVC.Infrastructure
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
@@ -8,44 +9,56 @@
 <h2>Liste des articles</h2>
 
 <p>
-    @Html.ActionLink("Ajouter un article", "Create")
+    <b>@Html.ActionLink("Ajouter un article", "Create")</b>
 </p>
-
-<div class="jumbotron">
     @DateTime.Now.ToString("dd/MM/yyyy")<br />
     @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-
+    <br />
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Nom)
+                @Html.ActionLink("N°", "Index", new { sortOrder = ViewBag.IdSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CategorieNom)
+                @Html.ActionLink("Nom", "Index", new { sortOrder = ViewBag.NameSortParm })
             </th>
-
+            <th>
+                @Html.ActionLink("Catégorie", "Index", new { sortOrder = ViewBag.CategorieSortParm })
+            </th>
+            <th>
+                Stock
+            </th>
             <th></th>
         </tr>
 
         @foreach (var item in Model)
         {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategorieNom)
-        </td>
-        <td>
-            @Html.ActionLink("Fiche article", "Details", new { id = item.ArticleId }, new { @class = "btn btn-default" })
-            @Html.ActionLink("Créer une réception", "Create", "Reception", new { id = item.ArticleId }, new { @class = "btn btn-default" })
-            @Html.ActionLink("Modifier", "Edit", new { id = item.ArticleId }, new { @class = "btn btn-default" })
-            @Html.ActionLink("Supprimer", "Delete", new { id = item.ArticleId }, new { @class = "btn btn-default" })
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ArticleId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nom)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategorieNom)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StockTotal.TotalStock)
+                </td>
+                <td>
+                    @Html.ActionLink("Créer une réception", "Create", "Reception", new { id = item.ArticleId }, new { @class = "btn btn-default" })
+                    @Html.ActionLink("Créer une expédition", "Create", "Expedition", new { id = item.ArticleId }, new { @class = "btn btn-default" })
+                    <br />
+                    @Html.ActionLink("Fiche article", "Details", new { id = item.ArticleId }, new { @class = "btn btn-default" })
+                    @Html.ActionLink("Modifier", "Edit", new { id = item.ArticleId }, new { @class = "btn btn-default" })
+                    @Html.ActionLink("Supprimer", "Delete", new { id = item.ArticleId }, new { @class = "btn btn-default" })
+                </td>
+            </tr>
         }
     </table>
-</div>
+    @Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 <div>
-    @Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")
+    <b>@Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")</b>
 </div>
