--- a/WarehouseMVC/Views/Categorie/Create.cshtml
+++ b/WarehouseMVC/Views/Categorie/Create.cshtml
@@ -10,7 +10,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="jumbotron">
+
         <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -28,9 +28,9 @@
                 </div>
             </div>
         </div>
-    </div>
+
 }
 
 <div>
-    @Html.ActionLink(">>> Annuler <<<", "Index")
+    <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
 </div>
