--- a/WarehouseMVC/Views/Categorie/Delete.cshtml
+++ b/WarehouseMVC/Views/Categorie/Delete.cshtml
@@ -1,4 +1,5 @@
 ﻿@model WarehouseMVC_DAL.Models.Categorie
+@using WarehouseMVC.Infrastructure
 
 @{
     ViewBag.Title = "Delete";
@@ -6,29 +7,23 @@
 
 <h2>Suppression de la catégorie</h2>
 
-<div class="jumbotron">
-    <h4>Categorie</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
+<hr />
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+        @DateTime.Now.ToString("dd/MM/yyyy")<br />
+        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+        <div class="col-lg-offset-1">
+            <h3>Catégorie n° @Html.DisplayFor(model => model.CategorieId)</h3>
+            <h3>@Html.DisplayFor(model => model.Nom)</h3>
+        </div>
+        <hr />
 
         <div class="form-actions no-color">
             <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
         </div>
-        <br/>
-        @Html.ActionLink(">>> Annuler <<<", "Index")
-    }
-</div>
+        <br />
 
+}
+<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
