--- a/WarehouseMVC/Views/Categorie/Details.cshtml
+++ b/WarehouseMVC/Views/Categorie/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Détail de la catégorie</h2>
 
-<div class="jumbotron">
+
     <h3>@Html.DisplayFor(model => model.Nom)</h3>
     <hr />
 
@@ -20,7 +20,7 @@
         </dd>
     </dl>
     @Html.ActionLink("Modifier", "Edit", new { id = Model.CategorieId }, new { @class = "btn btn-default" })
-</div>
+
 <p>
-    @Html.ActionLink("<<< Retour à la liste", "Index")
+    <br /><b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
 </p>
