--- a/WarehouseMVC/Views/Categorie/Edit.cshtml
+++ b/WarehouseMVC/Views/Categorie/Edit.cshtml
@@ -1,38 +1,41 @@
 ﻿@model WarehouseMVC_DAL.Models.Categorie
+@using WarehouseMVC.Infrastructure
 
 @{
     ViewBag.Title = "Edit";
 }
 
-    <h2>Modification de la catégorie</h2>
+<h2>Modification de la catégorie</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="jumbotron">
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.CategorieId)
+        @DateTime.Now.ToString("dd/MM/yyyy")<br />
+        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+<h3>Catégorie n° @Html.DisplayFor(model => model.CategorieId) - @Html.DisplayFor(model => model.Nom)</h3>
+        <div class="form-horizontal">
+            <hr />
+            <div class="form-group">
+                <div class="col-lg-offset-1">
+                    <b>@Html.DisplayNameFor(model => model.Nom)</b>
+                </div>
+                <div class="col-lg-offset-1">
+                    @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Confirmer la modification" class="btn btn-default" />
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Confirmer la modification" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-    </div>
 }
 
 <div>
-    @Html.ActionLink(">>> Annuler <<<", "Index")
+    <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
 </div>
