--- a/WarehouseMVC/Views/Client/Details.cshtml
+++ b/WarehouseMVC/Views/Client/Details.cshtml
@@ -8,12 +8,12 @@
 <h2>Détail du client</h2>
 
 <p>
-    @Html.ActionLink("Créer un client", "Create")
+    <b>@Html.ActionLink("Créer un client", "Create")</b>
 </p>
-<div class="jumbotron">
+
     @DateTime.Now.ToString("dd/MM/yyyy")<br />
     @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-    <h3>@Html.DisplayFor(model => model.Nom)</h3>
+<h3>Client n° @Html.DisplayFor(model => model.ClientId) - @Html.DisplayFor(model => model.Nom) @Html.DisplayFor(model => model.Prenom) - @Html.DisplayFor(model => model.NomSociete)</h3>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -78,9 +78,9 @@
         </dd>
     </dl>
     @Html.ActionLink("Modifier", "Edit", new { id = Model.ClientId }, new { @class = "btn btn-default" })
-</div>
+
 <p>
     
-    @Html.ActionLink("<<< Retour à la liste", "Index")
+    <br /><b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
 </p>
 
