--- a/WarehouseMVC/Views/Expedition/Details.cshtml
+++ b/WarehouseMVC/Views/Expedition/Details.cshtml
@@ -1,14 +1,17 @@
 ﻿@model WarehouseMVC_DAL.Models.Expedition
+@using WarehouseMVC.Infrastructure
 
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Expédition en attente de sortie de stock</h2>
 
-<div>
-    <h4>Expedition</h4>
-    <hr />
+
+    @DateTime.Now.ToString("dd/MM/yyyy")<br />
+    @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+<h3>Expedition n° @Html.DisplayFor(model => model.ExpeditionId)</h3>
+<hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Date)
@@ -16,30 +19,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Date)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Quantite)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Quantite)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UtilisateurId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UtilisateurId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UtilisateurNom)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UtilisateurNom)
         </dd>
 
         <dt>
@@ -64,6 +43,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.CategorieNom)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Quantite)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Quantite)
         </dd>
 
         <dt>
@@ -147,16 +134,17 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ClientNumTel)
+            @Html.DisplayNameFor(model => model.UtilisateurNom)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClientNumTel)
+            @Html.DisplayFor(model => model.UtilisateurNom)  @Html.DisplayFor(model => model.UtilisateurPrenom)
         </dd>
-
     </dl>
+    @Html.ActionLink("Confirmer l'expedition", "ConfirmExpedition", new { id = Model.ExpeditionId }, new { @class = "btn btn-default" })
     @Html.ActionLink("Modifier", "Edit", new { id = Model.ExpeditionId }, new { @class = "btn btn-default" })
-</div>
+    @Html.ActionLink("Annuler l'expedition", "Delete", new { id = Model.ExpeditionId }, new { @class = "btn btn-default" })
+
 <p>
-    @Html.ActionLink("<<< Retour à la liste", "Index")
+   <br /> <b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
 </p>
