--- a/WarehouseMVC/Views/Expedition/Index.cshtml
+++ b/WarehouseMVC/Views/Expedition/Index.cshtml
@@ -1,42 +1,44 @@
-﻿@model IEnumerable<WarehouseMVC_DAL.Models.Expedition>
+﻿@model PagedList.IPagedList<WarehouseMVC_DAL.Models.Expedition>
 @using WarehouseMVC.Infrastructure
+@using PagedList.Mvc
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Expéditions en attente</h2>
+    <h2>Expéditions en attente de sortie de stock</h2>
 
 <p>
-    @Html.ActionLink("Créer une nouvelle expédition", "Create")
+    <b>@Html.ActionLink("Créer une nouvelle expédition", "Index", "Article")</b>
 </p>
-<div class="jumbotron">
+
     @DateTime.Now.ToString("dd/MM/yyyy")<br />
     @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
     <br />
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ExpeditionId)
+                @Html.ActionLink("N°", "Index", new { sortOrder = ViewBag.IdSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.ActionLink("Date", "Index", new { sortOrder = ViewBag.DateSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ArticleNom)
+                @Html.ActionLink("Article", "Index", new { sortOrder = ViewBag.ArticleNomSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Quantite)
+                @Html.ActionLink("Quantité", "Index", new { sortOrder = ViewBag.QuantiteSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CategorieNom)
+                @Html.ActionLink("Catégorie", "Index", new { sortOrder = ViewBag.CategorieNomSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ClientNom)
+                @Html.ActionLink("Client", "Index", new { sortOrder = ViewBag.ClientNomSortParm })
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ClientNomSociete)
+                @Html.ActionLink("Société", "Index", new { sortOrder = ViewBag.ClientNomSocieteSortParm })
             </th>
+            <th></th>
         </tr>
 
         @foreach (var item in Model)
@@ -71,7 +73,6 @@
             </tr>
         }
     </table>
-</div>
-<div>
-    @Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")
-</div>
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+ 
+<b>@Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")</b>
