--- a/WarehouseMVC/Views/Fournisseur/Create.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/Create.cshtml
@@ -10,14 +10,14 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="jumbotron">
+
         <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control"} })
+                    @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -92,9 +92,12 @@
                 </div>
             </div>
         </div>
-    </div>
+
 }
 
 <div>
-    @Html.ActionLink("<<< Retour à la liste", "Index")
+    <b>@Html.ActionLink(">>> Annuler <<<", "Index", "Fournisseur")</b>
 </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
