--- a/WarehouseMVC/Views/Reception/Delete.cshtml
+++ b/WarehouseMVC/Views/Reception/Delete.cshtml
@@ -7,82 +7,26 @@
 
 <h2>Annulation de la réception</h2>
 
-<div>
-
-
+<hr />
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
     <div class="jumbotron">
         <h4>@DateTime.Now.ToString("dd/MM/yyyy")</h4>
         <h5>@SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom</h5>
         <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                Id Réception
-            </dt>
+        <div class="col-lg-offset-1">
+            <h3>Réception n° @Html.DisplayFor(model => model.ReceptionId) du @Html.DisplayFor(model => model.Date)</h3>
+            <h3>@Html.DisplayFor(model => model.FournisseurNom)</h3>
+            <h3>@Html.DisplayFor(model => model.ArticleNom)</h3>
+            <h3>Quantité : @Html.DisplayFor(model => model.Quantite)</h3>
+        </div>
+        <hr />
 
-            <dd>
-                @Html.DisplayFor(model => model.ReceptionId)
-            </dd>
-
-            <dt>
-                Id Article
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.ArticleId)
-            </dd>
-
-            <dt>
-                Article
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.ArticleNom)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Quantite)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Quantite)
-            </dd>
-
-            <dt>
-                Fournisseur
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.FournisseurNom)
-            </dd>
-
-            <dt>
-                Id Utilisateur
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.UtilisateurId)
-            </dd>
-
-            <dt>
-                Utilisateur
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.UtilisateurNom)
-            </dd>
-        </dl>
-
-
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-actions no-color">
-                <input type="submit" value="Annuler la réception" class="btn btn-default" />
-            </div>
-            <br />
-
-        }
+        <div class="form-actions no-color">
+            <input type="submit" value="Annuler la réception" class="btn btn-default" />
+        </div>
+        <br />
     </div>
-</div>
-@Html.ActionLink(">>> Annuler <<<", "Index")
+}
+<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
